# LendingAssessment

./: main.py  pyproject.toml  replit.nix
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
db_mgmt/: db_query.py  db_setup.sql  db_tables.sql
etl/: extraction.py  loading.py  transformation.py
infra/queries/: db_setup.sql  db_tables.sql
src/: extraction.py
utils/: db_handlers.py  db_setup.py
